// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`WebCLI WebCLI Output displays ansi colored content colored 1`] = `
Object {
  "__html": "
Model       Controller       Cloud/Region     Version    SLA          Timestamp
controller  google-us-east1  google/us-east1  2.9-beta1  unsupported  17:44:14Z

Machine  State    DNS             Inst id        Series  AZ          Message
0        <span style=\\"color: rgb(13,188,121)\\">started  </span>35.190.153.209  juju-3686b9-0  focal   us-east1-b  RUNNING
",
}
`;

exports[`WebCLI WebCLI Output displays messages recieved over the websocket 1`] = `
Object {
  "__html": "
Model       Controller       Cloud/Region     Version    SLA          Timestamp
controller  google-us-east1  google/us-east1  2.9-beta1  unsupported  17:44:14Z

Machine  State    DNS             Inst id        Series  AZ          Message
0        started  35.190.153.209  juju-3686b9-0  focal   us-east1-b  RUNNING
",
}
`;

exports[`WebCLI renders correctly 1`] = `
<WebCLI
  controllerWSHost="jimm.jujucharms.com:443"
  modelUUID="abc123"
>
  <div
    className="webcli"
  >
    <WebCLIOutput
      content=""
      helpMessage="Welcome to the Juju Web CLI - see the <a href=\\"https://juju.is/docs/olm/using-the-juju-web-cli\\" class=\\"p-link--inverted\\" target=\\"_blank\\">full documentation here</a>."
      setShouldShowHelp={[Function]}
      showHelp={false}
    >
      <div
        className="webcli__output"
        style={
          Object {
            "height": "1px",
          }
        }
      >
        <div
          aria-hidden={true}
          className="webcli__output-dragarea"
        >
          <div
            className="webcli__output-handle"
          />
        </div>
        <pre
          className="webcli__output-content"
          style={
            Object {
              "height": "1px",
            }
          }
        >
          <code
            dangerouslySetInnerHTML={
              Object {
                "__html": "",
              }
            }
          />
        </pre>
      </div>
    </WebCLIOutput>
    <div
      className="webcli__input"
    >
      <div
        className="webcli__input-prompt"
      >
        $ juju
      </div>
      <form
        onSubmit={[Function]}
      >
        <input
          autoCapitalize="none"
          autoComplete="off"
          autoCorrect="off"
          className="webcli__input-input"
          name="command"
          placeholder="enter command"
          spellCheck="false"
          type="text"
        />
      </form>
      <div
        className="webcli__input-help"
      >
        <i
          className="p-icon--help is-light"
          onClick={[Function]}
          onKeyDown={[Function]}
          role="button"
          tabIndex="0"
        />
      </div>
    </div>
  </div>
</WebCLI>
`;
